--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -34,7 +34,7 @@
     <!-- Custom styles for this template -->
     <link href="public/css/jumbotron.css" rel="stylesheet">
 
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
