--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -81,7 +81,7 @@ $(document).ready(function() {
 
 		console.log("button clicked");
 
-		var formData = $(".navbar-form.navbar-right").serialize();
+		var formData = $("form.navbar-form.navbar-right").serialize();
 		console.log("form data: " + formData);
 
 		$.ajax(
