--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -14,10 +14,10 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
-					<input type="text" placeholder="Email" class="form-control">
+					<input type="text" placeholder="Email" class="form-control" name="email">
 				</div>
 				<div class="form-group">
-					<input type="password" placeholder="Password" class="form-control">
+					<input type="password" placeholder="Password" class="form-control" name="password">
 				</div>
 				<button type="submit" class="btn btn-success">Sign in</button>
 			</form>
