--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,6 +12,10 @@
 			<a class="navbar-brand" href="#">Project name</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
+                <li id="home"><a href="/">Home</a></li>
+                <li id="about"><a href="/about">About</a></li>
+            </ul>
 			<form class="navbar-form navbar-right">
 				<div class="form-group">
 					<input type="text" placeholder="Email" class="form-control" name="email">
