--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,7 +12,7 @@
 			<a class="navbar-brand" href="#">Project name</a>
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
-			<ul class="nav navbar-left">
+			<ul class="nav navbar-nav">
                 <li id="home"><a href="/">Home</a></li>
                 <li id="about"><a href="/about">About</a></li>
             </ul>
