--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -1,19 +1,3 @@
-<!--<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%-title %></title>
-  <link rel="stylesheet" href="/css/stylesheet.css">
-  <% if (ENV_DEVELOPMENT) { %>
-    <script src="http://localhost:35729/livereload.js"></script>
-  <% } %>
-</head>
-<body>
-
-<h1><%-title %></h1>
-<p>Welcome to <%-title %></p>-->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,7 +9,7 @@
     <meta name="author" content="Jonne Pihlanen">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>TV-API</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link href="../../dist/css/bootstrap.min.css" rel="stylesheet">-->
