--- a/app/views/about.ejs
+++ b/app/views/about.ejs
@@ -2,30 +2,22 @@
 
 <% include navbar %>
 
-<!-- Main jumbotron for a primary marketing message or call to action -->
-<div class="jumbotron">
-	<div class="container">
-		<h1>Write a new post!</h1>
-
-		<form class="post-form" method="post" action="/addpost">
-			<div class="form-group">
-				<input type="text" placeholder="Title" class="form-control" name="title">
-			</div>
-			<div class="form-group">
-				<textarea class="form-control" rows="10" placeholder="Content" name="content"></textarea>
-			</div>
-			<button class="btn btn-success" type="submit">Add post!</button>
-		</form>
-
-	</div>
-</div>
-
 <div class="container">
+
 	<hr>
+
+	<div class="row">
+		<div>
+			<p>This is an API and a small smashup for finnish tv-series information.</p>
+		</div>
+	</div>
+
+	<hr>
+
 	<footer>
 		<p>&copy; Jonne Pihlanen 2015</p>
 	</footer>
-</div>
+</div> <!-- /container -->
 
 
 <!-- Bootstrap core JavaScript
@@ -40,13 +32,12 @@
 <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js"></script>
 <script>
 
-<!-- "http://www.tvapi-mashupjonne.rhcloud.com/addpost" -->
+// "http://www.tvapi-mashupjonne.rhcloud.com/addpost"
 
 $(document).ready(function() {
 
-	console.log("page loaded!");
-
 });
+
 
 </script>
 
