--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -18,6 +18,7 @@
 
     <!-- Custom styles for this template -->
     <link href="public/css/jumbotron.css" rel="stylesheet">
+    <link href="public/css/channels.css" rel="stylesheet"> 
     
   </head>
 
