changed look and navbar

--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -9,7 +9,7 @@
     <meta name="author" content="Jonne Pihlanen">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>TV-API</title>
+    <title>tv-api</title>
 
     <!-- Bootstrap core CSS -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
@@ -18,7 +18,8 @@
 
     <!-- Custom styles for this template -->
     <link href="public/css/jumbotron.css" rel="stylesheet">
-    <link href="public/css/channels.css" rel="stylesheet"> 
+    <link href="public/css/channels.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
     
   </head>
 
