--- a/app/views/guide.ejs
+++ b/app/views/guide.ejs
@@ -5,7 +5,7 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<div class="container guide">
-		<h2>Guide</h2>
+		<h2>Visualization</h2>
 	</div>
 </div>
 
@@ -31,49 +31,45 @@
 
 $(document).ready(function() {
 
-  //$.each(programs, function(index,program) {
-  //  $(".container.guide").append("<p>" + program.data.name + " : " + program.data.start + "</p>");
-  //});
+  var programs = <%- JSON.stringify(programs) %>
+
+  var diameter = 600;
+
+  var svg = d3.select('.container.guide').append('svg')
+    .attr('width', diameter)
+    .attr('height', diameter);
+ 
+  var bubble = d3.layout.pack()
+    .size([diameter, diameter])
+    .padding(3) // padding between adjacent circles
+    .value(function(d) {return d.size;}) // new data will be loaded to bubble layout
+
+  var nodes = bubble.nodes(processData(programs))
+    .filter(function(d) { return !d.children; }); // filter out the outer bubble
+
+  var vis = svg.selectAll('circle')
+    .data(nodes, function(d) { return d.name; })
+    .enter();
+ 
+  vis.append('circle')
+    .attr('transform', function(d) { return 'translate(' + d.x + ',' + d.y + ')'; })
+    .attr('r', function(d) { return d.r; })
+    .attr('class', function(d) { return d.className; });
+
+  function processData(data) {
+
+    var newDataSet = [];
+
+    for(var program in data) {
+      newDataSet.push({name: data[program].data.name, className: data[program].channelName.toLowerCase(), size: data[program].data.name.length});
+    }
+    return {children: newDataSet};
+
+  }
+
+  d3.select(self.frameElement).style("height", diameter + "px");
 
 });
-
-var programs = <%- JSON.stringify(programs) %>
-
-var diameter = 600;
- 
-var svg = d3.select('.container.guide').append('svg')
-  .attr('width', diameter)
-  .attr('height', diameter);
- 
-var bubble = d3.layout.pack()
-  .size([diameter, diameter])
-  .padding(3) // padding between adjacent circles
-  .value(function(d) {return d.size;}) // new data will be loaded to bubble layout
-
-var nodes = bubble.nodes(processData(programs))
-  .filter(function(d) { return !d.children; }); // filter out the outer bubble
-
-var vis = svg.selectAll('circle')
-  .data(nodes, function(d) { return d.name; })
-  .enter();
- 
-vis.append('circle')
-  .attr('transform', function(d) { return 'translate(' + d.x + ',' + d.y + ')'; })
-  .attr('r', function(d) { return d.r; })
-  .attr('class', function(d) { return d.className; });
-
-function processData(data) {
-
-  var newDataSet = [];
-
-  for(var program in data) {
-    newDataSet.push({name: data[program].data.name, className: data[program].channelName.toLowerCase(), size: data[program].data.name.length});
-  }
-  return {children: newDataSet};
-
-}
-
-d3.select(self.frameElement).style("height", diameter + "px");
 
 </script>
 
