--- a/app/views/profile.ejs
+++ b/app/views/profile.ejs
@@ -6,7 +6,6 @@
 
     <div class="page-header text-center">
         <h1><span class="fa fa-anchor"></span> Profile Page</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
     </div>
 
     <div class="row">
@@ -18,18 +17,17 @@
 
                 <form>
                     <div class="form-group">
-                        <label>ID</label>
-                        <input type="text" class="form-control" name="email" placeholder=<%= user._id %>>
-                    </div>
-                    <div class="form-group">
                         <label>Email</label>
                         <input type="text" class="form-control" name="email" placeholder=<%= user.local.email %>>
+                    </div>
+                    <div class="form-group">
+                        <label>Username</label>
+                        <input type="text" class="form-control" name="username" placeholder=<%= user.local.username %>>
                     </div>
                     <div class="form-group">
                         <label>Password</label>
                         <input type="password" class="form-control" name="password" placeholder=<%= user.local.password %>>
                     </div>
-                    <!--<button type="submit" class="btn btn-warning btn-lg">Login</button>-->
                 </form>
                 
             </div>
