--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -17,6 +17,10 @@
           <input type="text" class="form-control" name="email">
         </div>
         <div class="form-group">
+          <label>Username</label>
+          <input type="text" class="form-control" name="username">
+        </div>
+        <div class="form-group">
           <label>Password</label>
           <input type="password" class="form-control" name="password">
         </div>
