--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -11,7 +11,7 @@
 		</div>
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-left">
-        <li><a href="/documentation">Documentation</a></li>
+        <!--<li><a href="/documentation">Documentation</a></li>-->
         <li><a href="/about">About</a></li>
       </ul>
 
@@ -21,7 +21,7 @@
    			<li><a><%=user.local.username%></a></li>
         <li><a href="/newpost">New Post</a></li>
         <li><a href="/profile">Profile</a></li>
-        <li><a href="/settings">Settings</a></li>
+        <!--<li><a href="/settings">Settings</a></li>-->
         <li><hr></li>
         <li><a href="/logout">Logout</a></li>
       </ul>
