--- a/app/views/navbar.ejs
+++ b/app/views/navbar.ejs
@@ -19,7 +19,7 @@
 
    		<ul class="nav navbar-nav navbar-right">
    			<li><a><%=user.local.username%></a></li>
-        <li><a href="/newpost">New Post</a></li>
+        <li><a href="/post/create/new">New Post</a></li>
         <li><a href="/profile">Profile</a></li>
         <!--<li><a href="/settings">Settings</a></li>-->
         <li><hr></li>
