--- a/app/views/editpost.ejs
+++ b/app/views/editpost.ejs
@@ -1,20 +1,20 @@
 <% include header %>
 
-<%- include('navbar', {user: user}); %>
+<% include navbar %>
 
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<div class="container">
-		<h1>Write new post!</h1>
+		<h1>Edit post</h1>
 
-		<form class="post-form" method="post" action="/post/add">
+		<form class="post-form" method="post" action="/post/edit/<%=article._id%>">
 			<div class="form-group">
-				<input type="text" placeholder="Title" class="form-control" name="title">
+				<input type="text" placeholder="Title" class="form-control" name="title" value="<%=article.title%>">
 			</div>
 			<div class="form-group">
-				<textarea class="form-control" rows="10" placeholder="Content" name="text"></textarea>
+				<textarea class="form-control" rows="10" placeholder="Content" name="text"><%=article.text%></textarea>
 			</div>
-			<button class="btn btn-success" type="submit">Add post!</button>
+			<button class="btn btn-success" type="submit">Save changes</button>
 		</form>
 
 	</div>
@@ -36,5 +36,7 @@
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 <!--<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>-->
+
+<script type="text/javascript" src="https://ajax.microsoft.com/ajax/jQuery/jquery-1.4.2.min.js"></script>
 
 <% include footer %>
